--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.TXASplashActivity">
 
     <!-- App Logo/Icon -->
+    <ImageView
         android:id="@+id/ivLogo"
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -63,6 +64,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTagline">
 
+    <!-- ... (Status and Progress Bar inside) ... -->
+
         <!-- Status Text -->
         <TextView
             android:id="@+id/tvStatus"
@@ -104,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="v1.0.0"
+        android:text="v1.5.0"
         android:textSize="10sp"
         android:textColor="@color/txa_secondary"
         android:alpha="0.5"
